--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,3 +9,13 @@
         <title><%= title %></title>
     </head>
     <body>
+        <header class="header container-fluid">
+            <h1 class="title"><%= name %></h1>
+            <nav class="top-nav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a href='/'>Home</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
