--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <a href='/'>Home</a>
+                        <a href='characters'>Characters</a>
                     </li>
                 </ul>
             </nav>
