--- a/views/pages/characters.ejs
+++ b/views/pages/characters.ejs
@@ -2,10 +2,10 @@
 <main class="main container-fluid">
     <% data.forEach(el => { %>
         <a href="characters/<%= el.id %>">
-            <div className="character-box">
+            <div class="character-box">
                 <!-- The regex is necessary. Otherwise every image is broken. -->
-                <img className="img-fluid" src="<%- `${el.image.replace(/\/revision.*/, '')}` %>" alt="<%= el.name %>" />
-                <p className="character-name">
+                <img class="img-fluid" src="<%- `${el.image.replace(/\/revision.*/, '')}` %>" alt="<%= el.name %>" />
+                <p class="character-name">
                     <!-- Some names are completely missing in the API... -->
                     <%- el.name ? `${el.name}` : "Name missing" %>
                 </p>
