--- a/views/pages/characters.ejs
+++ b/views/pages/characters.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header'); %>
-<main class="main container-fluid">
+<main class="main characters-box container-fluid">
     <% data.forEach(el => { %>
         <a href="characters/<%= el.id %>">
             <div class="character-box">
