--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/style.css">
-        <title><%= title %></title>
+        <title><%- title ? `${title}` : 'Title Missing' %></title>
     </head>
     <body>
         <header class="header container-fluid">
-            <h1 class="title"><%= name %></h1>
+            <h1 class="title"><%- name ? `${name}` : "Name Missing" %></h1>
             <nav class="top-nav">
                 <ul class="nav">
                     <li class="nav-item">
